--- a/.github/workflows/marlin_auto_build.yml
+++ b/.github/workflows/marlin_auto_build.yml
@@ -8,6 +8,7 @@ on:
   # trigger every night at 03:30
   schedule:
     - cron:  '30 3 * * *'
+  workflow_dispatch: # Put here!!  
 
 jobs:
   create_builds:
