--- a/.github/workflows/marlin_auto_build.yml
+++ b/.github/workflows/marlin_auto_build.yml
@@ -15,5 +15,4 @@ jobs:
     runs-on: ubuntu-latest 
     steps:
     - uses: zisismaras/marlin_auto_build@v1
-permissions:
-  contents: write
+permissions: write-all
